# Poetry-project-with-Alembic-

./: app.db  pyproject.toml
alembic/: env.py
alembic/versions/: 4dc821966706_create_zxc3.py  6612d0add2eb_create_zxc.py  96353a1a572b_create_zxc3.py
src/: config.py  main.py
src/database/: crud.py  database.py  models.py
src/routers/: router.py
src/schems/: schemas.py
