[tool.poetry]
name = "backend"
version = "0.1.0"
description = "back with user"
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
pydantic = {extras = ["email"], version = "^2.6.4"}
uvicorn = {extras = ["standart"], version = "^0.29.0"}
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
pydantic-settings = "^2.2.1"
aiosqlite = "^0.20.0"
black = "^24.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
